--- a/css/geral.css
+++ b/css/geral.css
@@ -15,3 +15,54 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   color: black;
 }
+
+.container-conteudo {
+  display: grid;
+  grid-template-columns: 240px 1fr;
+}
+
+@media (max-width: 1400px) {
+  .container-conteudo {
+    grid-template-columns: 180px 1fr;
+  }
+}
+
+.btn {
+  display: none;
+}
+
+@media (max-width: 1000px) {
+  .btn {
+    display: block;
+    border: none;
+    background: none;
+    cursor: pointer;
+    padding: 16px;
+    position: absolute;
+    z-index: 1;
+    top: 4px;
+    left: 0;
+  }
+}
+
+@keyframes showLeft {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
+}
+
+@keyframes showDown {
+  from {
+    opacity: 0;
+    transform: translateY(-200px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0px);
+  }
+}
